<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_settings"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_statistic" />

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_start_game"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_statistic"
        app:layout_constraintStart_toEndOf="@+id/btn_settings"
        app:layout_constraintTop_toBottomOf="@+id/header_statistic"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/btn_statistic"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_statistic"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_statistic" />

    <TextView
        android:id="@+id/header_statistic"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:text="@string/dart_score_board"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_statistic_last_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_quit"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="849dp"
        android:layout_height="wrap_content"
        android:background="@color/orange_var"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>