<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="horizontal"
    tools:context=".FragmentAddPlayer">


    <EditText
        android:id="@+id/et_name"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/input_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_check"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/btn_done_AddPlayer"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/add_player"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/et_check"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/check_nr"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392" />

</androidx.constraintlayout.widget.ConstraintLayout>