<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".FragmentBullshot">

    <Button
        android:id="@+id/start_game"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/start_game"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_bullshot"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/bullshot_back"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/bullshot_back"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_bullshot"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/header_bullshot"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/header_bullshot"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/sub_header_bullshot"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/sub_header_bullshot"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bullshot"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="44dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yellow"
            android:textColorLink="@color/yellow"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yellow"
            android:textColorLink="@color/yellow"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/text_player_one"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/Player_One"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text_player_two"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:text="@string/player_two_bull"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_player_one"
        app:layout_constraintVertical_bias="0.110000014"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>